--- a/images/WindowsServer_2016/shippable.yml
+++ b/images/WindowsServer_2016/shippable.yml
@@ -64,7 +64,7 @@ jobs:
             - $script:IMG_NAME=$(shipctl get_resource_version_key "$env:IMG_OUT" "sourceName")
             - $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:IMG_OUT" "userName")
             - $script:DH_PASS=$(shipctl get_integration_resource_field "$env:IMG_OUT" "password")
-            - $script:FULL_IMG="$IMG_NAME":"$env:REL_VER"
+            - $script:FULL_IMG="${IMG_NAME}:${env:REL_VER}"
             - pushd $(shipctl get_resource_state "$env:RES_REPO")
             - docker build -t="$FULL_IMG" --pull .
             - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
