--- a/images/WindowsServer_2016/shippable.yml
+++ b/images/WindowsServer_2016/shippable.yml
@@ -99,14 +99,14 @@ jobs:
             - $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:IMG_OUT" "userName")
             - $script:DH_PASS=$(shipctl get_integration_resource_field "$env:IMG_OUT" "password")
             - pushd $(shipctl get_resource_state "$env:RES_REPO")
-            - docker build -t="${IMG_NAME}:${env:REL_VER}" --pull .
+            - docker build -t="$IMG_NAME:$REL_VER" --pull .
             - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
-            - docker push "${IMG_NAME}:${env:REL_VER}"
+            - docker push "$IMG_NAME:$REL_VER"
       - OUT: w2k16dotnetcore_dd_img
     on_success:
       script:
-        - shipctl put_resource_state_multi "$env:JOB_NAME" "versionName=${env:REL_VER}" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
-        - shipctl put_resource_state_multi "$env:IMG_OUT" "versionName=${env:REL_VER}" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=${env:BUILD_NUMBER}"
+        - shipctl put_resource_state_multi "$env:JOB_NAME" "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi "$env:IMG_OUT" "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=${env:BUILD_NUMBER}"
 
   - name: w2k16aspnetcore_x8664_build
     type: runSh
@@ -133,11 +133,11 @@ jobs:
             - $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:IMG_OUT" "userName")
             - $script:DH_PASS=$(shipctl get_integration_resource_field "$env:IMG_OUT" "password")
             - pushd $(shipctl get_resource_state "$env:RES_REPO")
-            - docker build -t="${IMG_NAME}:${env:REL_VER}" --pull .
+            - docker build -t="${IMG_NAME}:${REL_VER}" --pull .
             - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
-            - docker push "${IMG_NAME}:${env:REL_VER}"
+            - docker push "${IMG_NAME}:${REL_VER}"
       - OUT: w2k16aspnetcore_dd_img
     on_success:
       script:
-        - shipctl put_resource_state_multi "$env:JOB_NAME" "versionName=${env:REL_VER}" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
-        - shipctl put_resource_state_multi "$env:IMG_OUT" "versionName=${env:REL_VER}" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=${env:BUILD_NUMBER}"
+        - shipctl put_resource_state_multi "$env:JOB_NAME" "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi "$env:IMG_OUT" "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=${env:BUILD_NUMBER}"
