--- a/images/WindowsServer_2016/shippable.yml
+++ b/images/WindowsServer_2016/shippable.yml
@@ -99,9 +99,10 @@ jobs:
             - $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:IMG_OUT" "userName")
             - $script:DH_PASS=$(shipctl get_integration_resource_field "$env:IMG_OUT" "password")
             - pushd $(shipctl get_resource_state "$env:RES_REPO")
-            - docker build -t="${IMG_NAME}:${REL_VER}" --pull .
+            - $script:IMG="${IMG_NAME}:${REL_VER}"
+            - docker build -t="$IMG" --pull .
             - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
-            - docker push "${IMG_NAME}:${REL_VER}"
+            - docker push "$IMG"
       - OUT: w2k16dotnetcore_dd_img
     on_success:
       script:
