--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -107,11 +107,11 @@ jobs:
                 - IMG_OUT: "c7_dd_img"
                 - RES_REPO: "c7_dd_repo"
           script:
-            - pushd $(shipctl get_resource_state "$RES_REPO")
             - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
-            - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
-            - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
-            - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - pushd $(shipctl get_resource_state "$RES_REPO")
             - docker build -t=$IMG_NAME:$REL_VER --pull .
             - docker login -u $DH_USR_NAME -p $DH_PASS
             - docker push $IMG_NAME:$REL_VER
