--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -383,7 +383,12 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: dry_dh_x86_64_c7_tag_push
+      - IN: c7_x8664_tag
+      - IN: c7all_x8664_tag
+      - IN: c7nodall_x8664_tag
+      - IN: c7pytall_x8664_tag
+      - IN: c7javall_x8664_tag
+      - IN: c7cppall_x8664_tag
       - IN: gh_ship_repos_tag_push
       - IN: reports_tag_push
       - IN: prepami_repo
