--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -636,7 +636,18 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: dry_dh_x86_64_Ubuntu_tag_push
-      - IN: dry_dh_x86_64_u16_tag_push
+      - IN: u16_x8664_tag
+      - IN: u16all_x8664_tag
+      - IN: u16nodall_x8664_tag
+      - IN: u16pytall_x8664_tag
+      - IN: u16javall_x8664_tag
+      - IN: u16cppall_x8664_tag
+      - IN: u16cloall_x8664_tag
+      - IN: u16golall_x8664_tag
+      - IN: u16scaall_x8664_tag
+      - IN: u16ruball_x8664_tag
+      - IN: u16phpall_x8664_tag
+      - IN: u16microbase_x8664_tag
       - IN: gh_ship_repos_tag_push
       - IN: reports_tag_push
       - IN: prepami_repo
