--- a/shippable.yml
+++ b/shippable.yml
@@ -416,6 +416,21 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
+      - IN: dry_dh_x86_64_Ubuntu_tag_push
+      - IN: u16_x8664_tag
+      - IN: u16all_x8664_tag
+      - IN: u16nodall_x8664_tag
+      - IN: u16pytall_x8664_tag
+      - IN: u16javall_x8664_tag
+      - IN: u16cppall_x8664_tag
+      - IN: u16cloall_x8664_tag
+      - IN: u16golall_x8664_tag
+      - IN: u16scaall_x8664_tag
+      - IN: u16ruball_x8664_tag
+      - IN: u16phpall_x8664_tag
+      - IN: u16microbase_x8664_tag
+      - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
       - IN: baseami_patch
@@ -426,10 +441,6 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      - IN: dry_dh_x86_64_Ubuntu_tag_push
-      - IN: dry_dh_x86_64_u16_tag_push
-      - IN: gh_ship_repos_tag_push
-      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -793,6 +804,20 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
+      - IN: u16_x8664_tag
+      - IN: u16all_x8664_tag
+      - IN: u16nodall_x8664_tag
+      - IN: u16pytall_x8664_tag
+      - IN: u16javall_x8664_tag
+      - IN: u16cppall_x8664_tag
+      - IN: u16cloall_x8664_tag
+      - IN: u16golall_x8664_tag
+      - IN: u16scaall_x8664_tag
+      - IN: u16ruball_x8664_tag
+      - IN: u16phpall_x8664_tag
+      - IN: u16microbase_x8664_tag
+      - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
       - IN: u16baseami_patch
@@ -803,9 +828,6 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      - IN: dry_dh_x86_64_u16_tag_push
-      - IN: gh_ship_repos_tag_push
-      - IN: reports_tag_push
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
