--- a/images/aarch64/Ubuntu_16.04/shippable.yml
+++ b/images/aarch64/Ubuntu_16.04/shippable.yml
@@ -14,6 +14,21 @@ resources:
     seed:
       versionName: master
 
+  - name: u16pyt_aarch64_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: "dry-dock/aarch64_u16pyt"
+      branch: master
+
+  - name: u16pyt_aarch64_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/aarch64_u16pyt"
+    seed:
+      versionName: master
+
   - name: u16all_aarch64_dd_repo
     type: gitRepo
     integration: avinci_gh
@@ -117,6 +132,40 @@ jobs:
             - sudo docker login -u $DH_USR_NAME -p $DH_PASS
             - sudo docker push $IMG_NAME:$REL_VER
       - OUT: u16_aarch64_dd_img
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+
+  - name: u16pyt_aarch64_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    runtime:
+      nodePool: aarch64_u1604_cus_01
+      container: false
+    steps:
+      - IN: u16pyt_aarch64_dd_repo
+      - IN: u16_aarch64_dd_img
+      - TASK:
+          name: u16all_build
+          runtime:
+            options:
+              env:
+                - IMG_BASE: "u16_aarch64_dd_img"
+                - IMG_OUT: "u16pyt_aarch64_dd_img"
+                - RES_REPO: "u16pyt_aarch64_dd_repo"
+          script:
+            - REL_VER=$(shipctl get_resource_version_key "$IMG_BASE" "versionName")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+            - IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - pushd $(shipctl get_resource_state "$RES_REPO")
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
+      - OUT: u16pyt_aarch64_dd_img
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
