--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -659,7 +659,11 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -707,7 +711,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -753,7 +761,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -799,7 +811,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -845,7 +861,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -891,7 +911,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -937,7 +961,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -983,7 +1011,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -1029,7 +1061,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -1075,7 +1111,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -1121,7 +1161,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
