--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -629,7 +629,11 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
@@ -677,7 +681,11 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: gh_ship_repos_tag_push
+      - IN: execTemplates_repo_tag
+      - IN: node_repo_tag
+      - IN: cexec_repo_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
       - IN: reports_tag_push
       - IN: prepami_repo
         switch: off
