--- a/shippable.yml
+++ b/shippable.yml
@@ -84,20 +84,6 @@ resources:
     type: integration
     integration: winrm_creds
 
-  - name: cexec_repo
-    type: gitRepo
-    integration: avinci_gh
-    pointer:
-      sourceName: shippable/cexec
-      branch: master
-
-  - name: node_repo
-    type: gitRepo
-    integration: avinci_gh
-    pointer:
-      sourceName: shippable/node
-      branch: master
-
 jobs:
   - name: trig_gcp_img_prep
     type: runSh
@@ -153,8 +139,8 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: w2k16_x86_64_gcp_img_prep
-      - IN: node_repo
-      - IN: cexec_repo
+      - IN: node_sh_repo
+      - IN: cexec_sh_repo
       - IN: w2k16_reqProc_x86_64_build
       - IN: ami_reqKick_repo
       - IN: prepami_repo
@@ -398,8 +384,8 @@ jobs:
       - IN: u14phpall_dd_img
       - IN: u14cppall_dd_img
       - IN: u14javall_dd_img
-      - IN: node_repo
-      - IN: cexec_repo
+      - IN: node_sh_repo
+      - IN: cexec_sh_repo
       - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
@@ -422,8 +408,8 @@ jobs:
         switch: off
       - IN: baseami_params
         switch: off
-      - IN: cexec_repo
-      - IN: node_repo
+      - IN: cexec_sh_repo
+      - IN: node_sh_repo
       - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: baseami_prep
@@ -849,8 +835,8 @@ jobs:
       - IN: u16cloall_dd_img
       - IN: u16pytall_dd_img
       - IN: u16nodall_dd_img
-      - IN: node_repo
-      - IN: cexec_repo
+      - IN: node_sh_repo
+      - IN: cexec_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
@@ -873,8 +859,8 @@ jobs:
         switch: off
       - IN: u16baseami_params
         switch: off
-      - IN: cexec_repo
-      - IN: node_repo
+      - IN: cexec_sh_repo
+      - IN: node_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: u16baseami_prep
@@ -1004,8 +990,8 @@ jobs:
         switch: off
       - IN: windowsbaseami_winrm_keys
         switch: off
-      - IN: cexec_repo
-      - IN: node_repo
+      - IN: cexec_sh_repo
+      - IN: node_sh_repo
       - IN: w2k16_reqProc_x86_64_build
       - IN: ami_reqKick_repo
       - IN: windowsbaseami_prep
@@ -1122,8 +1108,8 @@ jobs:
       - IN: c7cppall_dd_img
       - IN: c7pytall_dd_img
       - IN: c7javall_dd_img
-      - IN: node_repo
-      - IN: cexec_repo
+      - IN: node_sh_repo
+      - IN: cexec_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
@@ -1149,8 +1135,8 @@ jobs:
         switch: off
       - IN: c7baseami_params
         switch: off
-      - IN: cexec_repo
-      - IN: node_repo
+      - IN: cexec_sh_repo
+      - IN: node_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: c7baseami_prep
