--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -394,7 +394,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: c7_x86_64_gcp_img_patch
@@ -446,7 +449,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
