--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -664,7 +664,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: u14_x86_64_gcp_img_patch
@@ -716,7 +719,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -766,7 +772,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -816,7 +825,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -866,7 +878,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -916,7 +931,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -966,7 +984,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1016,7 +1037,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1066,7 +1090,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1116,7 +1143,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1166,7 +1196,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
