--- a/shippable.yml
+++ b/shippable.yml
@@ -191,7 +191,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: w2k16_x86_64_gcp_img_patch
@@ -242,7 +245,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -456,7 +462,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: baseami_patch
@@ -494,7 +503,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -522,7 +534,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -550,7 +565,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -578,7 +596,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -606,7 +627,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -634,7 +658,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -662,7 +689,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -690,7 +720,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -718,7 +751,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -746,7 +782,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -774,7 +813,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -802,7 +844,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -895,7 +940,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: u16baseami_patch
@@ -933,7 +981,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -1029,7 +1080,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: ami_bits_access
@@ -1080,7 +1134,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+            - IN: c7_x86_64_rep_lib_tag
+            - IN: u14_x86_64_rep_lib_tag
+            - IN: u16_x86_64_rep_lib_tag
+            - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -1165,7 +1222,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - IN: prepami_repo
         switch: off
       - IN: c7baseami_patch
@@ -1204,7 +1264,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: reports_tag_push
+      - IN: c7_x86_64_rep_lib_tag
+      - IN: u14_x86_64_rep_lib_tag
+      - IN: u16_x86_64_rep_lib_tag
+      - IN: u16_aarch64_rep_lib_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
