updating to node_repo_file_tag

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -390,7 +390,7 @@ jobs:
       - IN: c7javall_x8664_tag
       - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -445,7 +445,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
