--- a/shippable.yml
+++ b/shippable.yml
@@ -187,7 +187,7 @@ jobs:
       - IN: w2k16dotnetcore_x8664_tag
       - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -241,7 +241,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -331,7 +331,7 @@ jobs:
       - IN: genexec_dd_tag
       - IN: genexec_sh_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -458,7 +458,7 @@ jobs:
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -499,7 +499,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -530,7 +530,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -561,7 +561,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -592,7 +592,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -623,7 +623,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -654,7 +654,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -685,7 +685,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -716,7 +716,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -747,7 +747,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -778,7 +778,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -809,7 +809,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -840,7 +840,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -936,7 +936,7 @@ jobs:
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -977,7 +977,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1076,7 +1076,7 @@ jobs:
       - IN: w2k16dotnetcore_x8664_tag
       - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1130,7 +1130,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1218,7 +1218,7 @@ jobs:
       - IN: c7javall_x8664_tag
       - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1260,7 +1260,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
