--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -660,7 +660,7 @@ jobs:
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -715,7 +715,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -768,7 +768,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -821,7 +821,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -874,7 +874,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -927,7 +927,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -980,7 +980,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1033,7 +1033,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1086,7 +1086,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1139,7 +1139,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -1192,7 +1192,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
