--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -630,7 +630,7 @@ jobs:
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
@@ -685,7 +685,7 @@ jobs:
     triggerMode: parallel
     steps:
       - IN: execTemplates_repo_tag
-      - IN: node_repo_tag
+      - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
