--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -339,7 +339,7 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: c7_x86_64_gcp_img_prep
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: cexec_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: prepami_repo
