--- a/shippable.yml
+++ b/shippable.yml
@@ -139,7 +139,7 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: w2k16_x86_64_gcp_img_prep
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: cexec_sh_repo
       - IN: w2k16_reqProc_x86_64_build
       - IN: ami_reqKick_repo
@@ -390,7 +390,7 @@ jobs:
       - IN: u14phpall_dd_img
       - IN: u14cppall_dd_img
       - IN: u14javall_dd_img
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: cexec_sh_repo
       - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
@@ -415,7 +415,7 @@ jobs:
       - IN: baseami_params
         switch: off
       - IN: cexec_sh_repo
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: baseami_prep
@@ -880,7 +880,7 @@ jobs:
       - IN: u16cloall_dd_img
       - IN: u16pytall_dd_img
       - IN: u16nodall_dd_img
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: cexec_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
@@ -905,7 +905,7 @@ jobs:
       - IN: u16baseami_params
         switch: off
       - IN: cexec_sh_repo
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: u16baseami_prep
@@ -1042,7 +1042,7 @@ jobs:
       - IN: windowsbaseami_winrm_keys
         switch: off
       - IN: cexec_sh_repo
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: w2k16_reqProc_x86_64_build
       - IN: ami_reqKick_repo
       - IN: windowsbaseami_prep
@@ -1165,7 +1165,7 @@ jobs:
       - IN: c7cppall_dd_img
       - IN: c7pytall_dd_img
       - IN: c7javall_dd_img
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: cexec_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
@@ -1193,7 +1193,7 @@ jobs:
       - IN: c7baseami_params
         switch: off
       - IN: cexec_sh_repo
-      #- IN: node_sh_repo
+      - IN: node_sh_repo
       - IN: u16_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: c7baseami_prep
