--- a/shippable.yml
+++ b/shippable.yml
@@ -141,7 +141,7 @@ jobs:
       - IN: w2k16_x86_64_gcp_img_prep
       - IN: node_sh_repo
       - IN: cexec_sh_repo
-      - IN: w2k16_reqProc_x86_64_build
+      - IN: w2k16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: prepami_repo
         switch: off
@@ -392,7 +392,7 @@ jobs:
       - IN: u14javall_dd_img
       - IN: node_sh_repo
       - IN: cexec_sh_repo
-      - IN: u14_reqProc_x8664_build
+      - IN: u14reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
           script:
@@ -416,7 +416,7 @@ jobs:
         switch: off
       - IN: cexec_sh_repo
       - IN: node_sh_repo
-      - IN: u14_reqProc_x8664_build
+      - IN: u14reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: baseami_prep
       - TASK:
@@ -882,7 +882,7 @@ jobs:
       - IN: u16nodall_dd_img
       - IN: node_sh_repo
       - IN: cexec_sh_repo
-      - IN: u16_reqProc_x8664_build
+      - IN: u16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
           script:
@@ -906,7 +906,7 @@ jobs:
         switch: off
       - IN: cexec_sh_repo
       - IN: node_sh_repo
-      - IN: u16_reqProc_x8664_build
+      - IN: u16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: u16baseami_prep
       - TASK:
@@ -1013,7 +1013,7 @@ jobs:
       - IN: w2k16_dd_img
       - IN: w2k16dotnetcore_dd_img
       - IN: w2k16aspnetcore_dd_img
-      - IN: w2k16_reqProc_x86_64_build
+      - IN: w2k16reqProc_x8664_build
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -1043,7 +1043,7 @@ jobs:
         switch: off
       - IN: cexec_sh_repo
       - IN: node_sh_repo
-      - IN: w2k16_reqProc_x86_64_build
+      - IN: w2k16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: windowsbaseami_prep
       - TASK:
@@ -1167,7 +1167,7 @@ jobs:
       - IN: c7javall_dd_img
       - IN: node_sh_repo
       - IN: cexec_sh_repo
-      - IN: u16_reqProc_x8664_build
+      - IN: u16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
           script:
@@ -1194,7 +1194,7 @@ jobs:
         switch: off
       - IN: cexec_sh_repo
       - IN: node_sh_repo
-      - IN: u16_reqProc_x8664_build
+      - IN: u16reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: c7baseami_prep
       - TASK:
